services/titan-execution-rs/check_output.txt
    Checking titan-execution-rs v0.1.0 (/Users/ivan/Code/trading/titan/services/titan-execution-rs)
error[E0382]: borrow of moved value: `global_halt`
   --> src/nats_engine.rs:783:32
    |
29  |     global_halt: Arc<GlobalHalt>,
    |     ----------- move occurs because `global_halt` has type `Arc<GlobalHalt>`, which does not implement the `Copy` trait
...
490 |     let nats_handle = tokio::spawn(async move {
    |                                    ---------- value moved here
491 |         loop {
    |         ---- inside of this loop
...
497 |                             if global_halt.is_halted() {
    |                                ----------- variable moved due to use in coroutine
...
783 |     let global_halt_for_risk = global_halt.clone();
    |                                ^^^^^^^^^^^ value borrowed here after move

error[E0382]: borrow of moved value: `hmac_validator`
   --> src/nats_engine.rs:784:31
    |
482 |     let hmac_validator = crate::security::HmacValidator::new();
    |         -------------- move occurs because `hmac_validator` has type `HmacValidator`, which does not implement the `Copy` trait
...
490 |     let nats_handle = tokio::spawn(async move {
    |                                    ---------- value moved here
491 |         loop {
    |         ---- inside of this loop
...
530 |                                         if let Err(e) = hmac_validator.validate(&envelope, &value["payload"]) {
    |                                                         -------------- variable moved due to use in coroutine
...
784 |     let hmac_validator_risk = hmac_validator.clone();
    |                               ^^^^^^^^^^^^^^ value borrowed here after move

error[E0560]: struct `GlobalHalt` has no field named `is_halted`
  --> src/circuit_breaker.rs:22:13
   |
22 |             is_halted: Arc::new(AtomicBool::new(exists)),
   |             ^^^^^^^^^ `GlobalHalt` does not have this field
   |
   = note: all struct fields are already assigned

error[E0615]: attempted to take value of method `is_halted` on type `&GlobalHalt`
  --> src/circuit_breaker.rs:29:14
   |
29 |         self.is_halted.load(Ordering::SeqCst)
   |              ^^^^^^^^^ method, not a field
   |
help: use parentheses to call the method
   |
29 |         self.is_halted().load(Ordering::SeqCst)
   |                       ++

error[E0615]: attempted to take value of method `is_halted` on type `&GlobalHalt`
  --> src/circuit_breaker.rs:34:25
   |
34 |         let prev = self.is_halted.swap(active, Ordering::SeqCst);
   |                         ^^^^^^^^^ method, not a field
   |
help: use parentheses to call the method
   |
34 |         let prev = self.is_halted().swap(active, Ordering::SeqCst);
   |                                  ++

warning: use of deprecated method `prometheus::proto_ext::<impl prometheus::proto::MetricFamily>::get_name`: Please use `.name()` instead
  --> src/sre.rs:15:19
   |
15 |             if mf.get_name() == "titan_execution_bulgaria_adverse_selection_bps" {
   |                   ^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `prometheus::proto_ext::<impl prometheus::proto::Bucket>::get_upper_bound`: Please use `.upper_bound()` instead
  --> src/sre.rs:29:31
   |
29 |                         if (b.get_upper_bound() - 20.0).abs() < 0.001 {
   |                               ^^^^^^^^^^^^^^^

warning: use of deprecated method `prometheus::proto_ext::<impl prometheus::proto::Bucket>::get_cumulative_count`: Please use `.cumulative_count()` instead
  --> src/sre.rs:30:45
   |
30 | ...                   count_le_20 = b.get_cumulative_count();
   |                                       ^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `ttl_ms`
  --> src/persistence/redb_store.rs:49:48
   |
49 |     pub fn check_idempotency(&self, key: &str, ttl_ms: i64) -> Result<bool, StoreError> {
   |                                                ^^^^^^ help: if this is intentional, prefix it with an underscore: `_ttl_ms`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `expected_sig`
  --> src/security.rs:94:13
   |
94 |         let expected_sig = hex::encode(expected_bytes);
   |             ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_expected_sig`

Some errors have detailed explanations: E0382, E0560, E0615.
For more information about an error, try `rustc --explain E0382`.
warning: `titan-execution-rs` (lib) generated 5 warnings
error: could not compile `titan-execution-rs` (lib) due to 5 previous errors; 5 warnings emitted
